Added meta tags to the home page

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -4,6 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="author" content="Gabee De Vera" />
+        <meta
+            name="description"
+            content="Welcome to the homepage of the Climate Post. We aim to give you accurate information about earth's climate"
+        />
+        <meta name="keywords" content="homepage, climate, post" />
+        <meta name="date" content="31/10/2021" />
+        <meta name="revised" content="31/10/2021" />
         <script
             src="scripts/component-generation/generator.js"
             type="module"
