Created Articles List
There isn't any JavaScript interactivity yet. I am planning to store metadata about the articles in a JSON file and then process and present the data using JavaScript.

--- a/PotassiumDeVera1stQtrProj/htdocs/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/index.html
@@ -42,7 +42,38 @@
                     </div>
                 </div>
             </section>
-            <section class="latestArticles"></section>
+            <section class="latestArticles">
+                <h1>Latest Articles</h1>
+                <div id="articlesList">
+                    <div class="article">
+                        <div class="image">
+                            <img src="/images/testImage2.jpeg" alt="">
+                        </div>
+                        <h2 class="title">How food waste does stuff</h2>
+                        <p class="author">Dr. Psi T. Go</p>
+                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
+                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                    </div>
+                    <div class="article">
+                        <div class="image">
+                            <img src="/images/testImage2.jpeg" alt="">
+                        </div>
+                        <h2 class="title">How food waste does stuff</h2>
+                        <p class="author">Dr. Psi T. Go</p>
+                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
+                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                    </div>
+                    <div class="article">
+                        <div class="image">
+                            <img src="/images/testImage2.jpeg" alt="">
+                        </div>
+                        <h2 class="title">How food waste does stuff</h2>
+                        <p class="author">Dr. Psi T. Go</p>
+                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
+                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                    </div>
+                </div>
+            </section>
         </main>
     </body>
 </html>
