--- a/PotassiumDeVera1stQtrProj/htdocs/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/index.html
@@ -18,62 +18,109 @@
             defer
         ></script>
         <script src="/scripts/global.js" type="module" defer></script>
-        <link rel="icon" href="/images/logo1.png" type="image/png">
-        <link rel="stylesheet" href="/css/global.css" type="text/css"/>
-        <link rel="stylesheet" href="/css/index.css" type="text/css"/>
-        <link rel="stylesheet" href="/css/header.module.css" type="text/css"/>
+        <link rel="icon" href="/images/logo1.png" type="image/png" />
+        <link rel="stylesheet" href="/css/global.css" type="text/css" />
+        <link rel="stylesheet" href="/css/index.css" type="text/css" />
+        <link rel="stylesheet" href="/css/header.module.css" type="text/css" />
+        <link rel="stylesheet" href="/css/footer.module.css" type="text/css" />
         <title>The Climate Post</title>
     </head>
     <body>
         <!-- This HTML code will tell JavaScript to insert the header component into this div -->
-        <div data-component data-component-name="Header" data-props='{}''></div>
+        <div data-component data-component-name="Header" data-props="{}"></div>
 
         <main class="content">
             <section class="header">
                 <!-- Note: I decided not to use CSS background-image so that I can manipulate the image using JavaScript (simply by changing the src attribute in the JavaScript code) -->
                 <div class="backgroundImage">
-                    <img src="/images/homePageHeader3.png" alt="This is an image of a forest" title="Source: DaveyBaker. (2013, October 15). Green forest 1 of 3[Image]. DeviantArt. https://www.deviantart.com/daveybaker/art/Green-forest-1-of-3-407309171">
+                    <img
+                        src="/images/homePageHeader3.png"
+                        alt="This is an image of a forest"
+                        title="Source: DaveyBaker. (2013, October 15). Green forest 1 of 3[Image]. DeviantArt. https://www.deviantart.com/daveybaker/art/Green-forest-1-of-3-407309171"
+                    />
                 </div>
                 <div class="headerContent">
                     <div class="headerText">
-                        <h1 class="title">The <span class="secondaryColor">Climate</span> Post</h1>
-                        <p class="description">Your Online Resource for
-                            <span class="secondaryColor">Climate Change</span></p>
+                        <h1 class="title">
+                            The <span class="secondaryColor">Climate</span> Post
+                        </h1>
+                        <p class="description">
+                            Your Online Resource for
+                            <span class="secondaryColor">Climate Change</span>
+                        </p>
                     </div>
                 </div>
             </section>
+            <section class="headerCaption">
+                <p class="headerImageCitation">
+                    Image Source: DaveyBaker. (2013, October 15).
+                    <i>Green forest 1 of 3</i>[Image]. DeviantArt.
+                    <a
+                        href="https://www.deviantart.com/daveybaker/art/Green-forest-1-of-3-407309171"
+                        >https://www.deviantart.com/daveybaker/art/Green-forest-1-of-3-407309171</a
+                    >
+                </p>
+            </section>
+
             <section class="latestArticles">
                 <h1>Latest Articles</h1>
                 <div id="articlesList">
                     <div class="article">
                         <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="">
+                            <img src="/images/testImage2.jpeg" alt="" />
                         </div>
                         <h2 class="title">How food waste does stuff</h2>
                         <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
-                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                        <p class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Odit quaerat ducimus nobis dolorum officia
+                            totam quos commodi laudantium quam illo molestiae,
+                            officiis, quisquam accusamus dolore provident
+                            nostrum perspiciatis earum optio!
+                        </p>
+                        <a href="/articles/abcd.html" class="redirectButton"
+                            >Read Article »</a
+                        >
                     </div>
                     <div class="article">
                         <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="">
+                            <img src="/images/testImage2.jpeg" alt="" />
                         </div>
                         <h2 class="title">How food waste does stuff</h2>
                         <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
-                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                        <p class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Odit quaerat ducimus nobis dolorum officia
+                            totam quos commodi laudantium quam illo molestiae,
+                            officiis, quisquam accusamus dolore provident
+                            nostrum perspiciatis earum optio!
+                        </p>
+                        <a href="/articles/abcd.html" class="redirectButton"
+                            >Read Article »</a
+                        >
                     </div>
                     <div class="article">
                         <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="">
+                            <img src="/images/testImage2.jpeg" alt="" />
                         </div>
                         <h2 class="title">How food waste does stuff</h2>
                         <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit quaerat ducimus nobis dolorum officia totam quos commodi laudantium quam illo molestiae, officiis, quisquam accusamus dolore provident nostrum perspiciatis earum optio!</p>
-                        <a href="/articles/abcd.html" class="redirectButton">Read Article »</a>
+                        <p class="description">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing
+                            elit. Odit quaerat ducimus nobis dolorum officia
+                            totam quos commodi laudantium quam illo molestiae,
+                            officiis, quisquam accusamus dolore provident
+                            nostrum perspiciatis earum optio!
+                        </p>
+                        <a href="/articles/abcd.html" class="redirectButton"
+                            >Read Article »</a
+                        >
                     </div>
                 </div>
             </section>
         </main>
+
+        <!-- This HTML code will tell JavaScript to insert the footer component into this div -->
+        <div data-component data-component-name="Footer" data-props="{}"></div>
     </body>
 </html>
