Created a script to automatically generate the article previews
This script can be found in scripts/index.ts

--- a/PotassiumDeVera1stQtrProj/htdocs/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/index.html
@@ -11,13 +11,14 @@
         />
         <meta name="keywords" content="homepage, climate, post" />
         <meta name="date" content="31/10/2021" />
-        <meta name="revised" content="31/10/2021" />
+        <meta name="revised" content="6/11/2021" />
         <script
             src="/scripts/component-generation/generator.js"
             type="module"
             defer
         ></script>
         <script src="/scripts/global.js" type="module" defer></script>
+        <script src="/scripts/index.js" type="module" defer></script>
         <link rel="icon" href="/images/logo1.png" type="image/png" />
         <link rel="stylesheet" href="/css/global.css" type="text/css" />
         <link rel="stylesheet" href="/css/index.css" type="text/css" />
@@ -65,57 +66,7 @@
             <section class="latestArticles">
                 <h1>Latest Articles</h1>
                 <div id="articlesList">
-                    <div class="article">
-                        <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="" />
-                        </div>
-                        <h2 class="title">How food waste does stuff</h2>
-                        <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Odit quaerat ducimus nobis dolorum officia
-                            totam quos commodi laudantium quam illo molestiae,
-                            officiis, quisquam accusamus dolore provident
-                            nostrum perspiciatis earum optio!
-                        </p>
-                        <a href="/articles/abcd.html" class="redirectButton"
-                            >Read Article »</a
-                        >
-                    </div>
-                    <div class="article">
-                        <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="" />
-                        </div>
-                        <h2 class="title">How food waste does stuff</h2>
-                        <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Odit quaerat ducimus nobis dolorum officia
-                            totam quos commodi laudantium quam illo molestiae,
-                            officiis, quisquam accusamus dolore provident
-                            nostrum perspiciatis earum optio!
-                        </p>
-                        <a href="/articles/abcd.html" class="redirectButton"
-                            >Read Article »</a
-                        >
-                    </div>
-                    <div class="article">
-                        <div class="image">
-                            <img src="/images/testImage2.jpeg" alt="" />
-                        </div>
-                        <h2 class="title">How food waste does stuff</h2>
-                        <p class="author">Dr. Psi T. Go</p>
-                        <p class="description">
-                            Lorem ipsum dolor, sit amet consectetur adipisicing
-                            elit. Odit quaerat ducimus nobis dolorum officia
-                            totam quos commodi laudantium quam illo molestiae,
-                            officiis, quisquam accusamus dolore provident
-                            nostrum perspiciatis earum optio!
-                        </p>
-                        <a href="/articles/abcd.html" class="redirectButton"
-                            >Read Article »</a
-                        >
-                    </div>
+                    <!-- JavaScript will fill this part of the HTML Document up with article previews. The code that does this is in scripts/index.ts -->
                 </div>
             </section>
         </main>
