--- a/PotassiumDeVera1stQtrProj/htdocs/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/index.html
@@ -52,26 +52,6 @@
                 "showTitle": true
                 }'
             ></section>
-            <!--section class="header">
-                <div class="backgroundImage">
-                    <img
-                        src="/images/homePageHeader3.png"
-                        alt="This is an image of a forest"
-                        title="Source: DaveyBaker. (2013, October 15). Green forest 1 of 3[Image]. DeviantArt. https://www.deviantart.com/daveybaker/art/Green-forest-1-of-3-407309171"
-                    />
-                </div>
-                <div class="headerContent">
-                    <div class="headerText">
-                        <h1 class="title">
-                            The <span class="secondaryColor">Climate</span> Post
-                        </h1>
-                        <p class="description">
-                            Your Online Resource for
-                            <span class="secondaryColor">Climate Change</span>
-                        </p>
-                    </div>
-                </div>
-            </section-->
             <section class="headerCaption">
                 <p class="headerImageCitation">
                     Image Source: DaveyBaker. (2013, October 15).
@@ -86,7 +66,7 @@
             <section class="latestArticles">
                 <h1>Latest Articles</h1>
                 <div id="articlesList">
-                    <!-- JavaScript will fill this part of the HTML Document up with article previews. The code that does this is in scripts/index.ts -->
+                    <!-- JavaScript will fill this part of the HTML Document with article previews. The code that does this is in scripts/index.ts -->
                 </div>
             </section>
         </main>
