Created Breadcrumb for the /article page

--- a/PotassiumDeVera1stQtrProj/htdocs/article/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/article/index.html
@@ -34,7 +34,14 @@
 
         <main class="content">
             <section class="imageHeader"></section>
-            Owaranai Yume Wo
+            <section class="headerCaption"></section>
+            <section class="breadcrumb">
+                <ul class="breadcrumb">
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/articleList">Article List</a></li>
+                    <li id="breadcrumbCurrentPage"></li>
+                </ul>
+            </section>
         </main>
 
         <!-- This HTML code will tell JavaScript to insert the footer component into this div -->
