Wrote an article on how Food Waste and Climate Change are interconnected

--- a/PotassiumDeVera1stQtrProj/htdocs/article/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/article/index.html
@@ -42,6 +42,14 @@
                     <li id="breadcrumbCurrentPage"></li>
                 </ul>
             </section>
+            <section class="articleHeader">
+                <h1 id="articleTitle">Title</h1>
+                <p>
+                    By <span id="articleAuthor">The Climate Post Editors</span>
+                </p>
+                <p id="articlePublicationDate">Unknown Publication Date</p>
+            </section>
+            <section class="articleContent"></section>
         </main>
 
         <!-- This HTML code will tell JavaScript to insert the footer component into this div -->
