Did some Final Checks I added more information in the Readme.md file I added the Procfile for Heroku I added some finishing touches to some of the HTML files

--- a/PotassiumDeVera1stQtrProj/htdocs/article/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/article/index.html
@@ -1,3 +1,5 @@
+<!-- Note: This article page uses JavaScript to render the articles. It takes the id url parameter and then uses that to get the article data -->
+
 <!DOCTYPE html>
 <html lang="en">
     <head>
