Added helpful comments

--- a/PotassiumDeVera1stQtrProj/htdocs/article/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/article/index.html
@@ -61,6 +61,9 @@
 
             <!-- This section contains the actual article. JavaScript will get the HTML code from an HTML file in the articles/ folder and then insert it here -->
             <section class="articleContent"></section>
+
+            <!-- TODO create a small section that allows the user to go to the next/previous article (to comply with the navigation criterion) -->
+            <!-- TODO Extra note: to comply with the requirements outlined in the rubrics, you may also have to add a list of all articles in the /about page -->
         </main>
 
         <!-- This HTML code will tell JavaScript to insert the footer component into this div -->
