Created a searchbar in the /articleList page

--- a/PotassiumDeVera1stQtrProj/htdocs/articleList/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/articleList/index.html
@@ -37,11 +37,16 @@
 
         <main class="content">
             <section class="searchbar">
-                <!-- TODO Create Searchbar -->
-                <!--
-                    Note that this will only show up on smaller screens
-                    (It is redundant to show it on bigger screens because the searchbar is shown in the header anyways)
-                -->
+                <input
+                    id="searchbarInput"
+                    placeholder="What article are you looking for?"
+                />
+                <img
+                    id="searchBarIcon"
+                    src="/images/magnifyingGlass1.svg"
+                    alt="Search Bar Icon"
+                    title="Made by Gabee De Vera"
+                />
             </section>
             <section class="results"></section>
         </main>
