Created a navigator at the bottom of the article page to comply with one of the criterion

--- a/PotassiumDeVera1stQtrProj/htdocs/article/index.html
+++ b/PotassiumDeVera1stQtrProj/htdocs/article/index.html
@@ -64,6 +64,24 @@
 
             <!-- TODO create a small section that allows the user to go to the next/previous article (to comply with the navigation criterion) -->
             <!-- TODO Extra note: to comply with the requirements outlined in the rubrics, you may also have to add a list of all articles in the /about page -->
+
+            <section class="articleNavigator">
+                <div class="previous">
+                    <a class="previousPageLink">
+                        &leftarrow;
+                        <p id="articleNavigatorPreviousPageName"></p>
+                    </a>
+                </div>
+                <div class="current">
+                    <p id="articleNavigatorCurrentPageName"></p>
+                </div>
+                <div class="next">
+                    <a class="nextPageLink">
+                        <p id="articleNavigatorNextPageName"></p>
+                        &rightarrow;
+                    </a>
+                </div>
+            </section>
         </main>
 
         <!-- This HTML code will tell JavaScript to insert the footer component into this div -->
